--- a/webApp/app/view/index.html
+++ b/webApp/app/view/index.html
@@ -30,6 +30,9 @@
       <div class='analyze'>
         <button id='analyze-button' class='analyze-button' type='button' onclick='analyze()'>Analyze</button>
       </div>
+      <div class='spotify-login'>
+        <button id='spotify-login-button' class='spotify-login-button' type='button' onclick='spotify_login()'>Login to Spotify</button>
+      </div>
       <div class='result-label'>
         <label id='result-label'></label>
       </div>
